---------------
Gob Online Chat
---------------

============
Version: 0.2
Date:

Features

* KB - 688359 
* KB - 686540
* KB - 686542
* KB - 688367
* KB - 688363

Bugs

* KB - 686534

============