@@ -1,9 +1,9 @@
 ---------------
-Gob Online Chat
+Gob Online Chat - ReadMe
 ---------------
 
 Version: 0.2 beta
-Author: Ken Barber
+Author: Ken Barber (ken@bob.sh)
 
 1. Introduction
 
