@@ -1,5 +1,5 @@
 ---------------
-Gob Online Chat
+Gob Online Chat - Change Log
 ---------------
 
 ============
@@ -13,6 +13,7 @@ Features
 * KB - 686542
 * KB - 688367
 * KB - 688363
+* KB - Documentation Updated
 
 Bugs
 
